# zed

./: Cargo.toml
assets/settings/: default.json
crates/dance/: Cargo.toml  dance.rs  readme.md
crates/editor/src/: actions.rs  editor.rs  element.rs  movement.rs
crates/language/src/: buffer.rs  proto.rs
crates/proto/proto/: buffer.proto  zed.proto
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
script/: bundle-mac
