[package]
name = "dance"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "dance.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-compat = { version = "0.2.1", "optional" = true }
async-trait = { workspace = true, "optional" = true }
collections.workspace = true
command_palette.workspace = true
command_palette_hooks.workspace = true
editor.workspace = true
gpui.workspace = true
itertools.workspace = true
language.workspace = true
log.workspace = true
multi_buffer.workspace = true
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", branch = "master", features = [
    "use_tokio",
], optional = true }
regex.workspace = true
search.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
tokio = { version = "1.15", "optional" = true }
ui.workspace = true
workspace.workspace = true
zed_actions.workspace = true
schemars.workspace = true
util.workspace = true
text.workspace = true

[dev-dependencies]
command_palette.workspace = true
editor = { workspace = true, features = ["test-support"] }
futures.workspace = true
gpui = { workspace = true, features = ["test-support"] }
release_channel.workspace = true
indoc.workspace = true
language = { workspace = true, features = ["test-support"] }
lsp = { workspace = true, features = ["test-support"] }
parking_lot.workspace = true
settings.workspace = true
util = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
